--- a/assets/styles/layout.styl
+++ b/assets/styles/layout.styl
@@ -35,3 +35,10 @@ h2
     font-weight 600
     @media (min-width $screen-md)
         font-size 2rem
+
+p
+    margin 1rem 0
+
+ul
+    list-style-type disc
+    margin 1rem 0 1rem 1.5rem
